--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "rollup -c"
+        "build": "rollup -c",
+        "format": "prettier --write .",
+        "check-format": "prettier --check ."
     },
     "repository": {
         "type": "git",
@@ -22,7 +24,8 @@
     },
     "homepage": "https://github.com/yikuansun/drss#readme",
     "devDependencies": {
-        "rollup": "^4.20.0"
+        "rollup": "^4.20.0",
+        "prettier": "^3.0.0"
     },
     "dependencies": {
         "@rollup/plugin-terser": "^0.4.4"
