--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rollup -c",
     "format": "prettier --write .",
-    "check-format": "prettier --check ."
+    "check-format": "prettier --check .",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "repository": {
     "type": "git",
@@ -24,8 +25,12 @@
   },
   "homepage": "https://github.com/yikuansun/drss#readme",
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "@rollup/plugin-terser": "^0.4.4",
+    "eslint": "^9.9.0",
+    "globals": "^15.9.0",
     "prettier": "^3.0.0",
-    "rollup": "^4.20.0"
+    "rollup": "^4.20.0",
+    "typescript-eslint": "^8.1.0"
   }
 }
